flickering issue on header

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -95,7 +95,7 @@ html{
 }
 .bar.bar-header .button + .title {
     text-align: left;
-    left: 48px;!important;
+    left: 48px!important;
     line-height: 46px;
     position: fixed;
     float: none !important;
@@ -103,7 +103,7 @@ html{
 div .title.title-left.header-item
 {
   text-align: left;
-    left: 48px; !important;
+    left: 48px !important;
   line-height: 46px;
   position: fixed;
   float: none !important;
